// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentPickerModal with contacts renders a table with the available contacts 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-paper"
    data-testid="agent-picker-modal"
  >
    <div
      class="PodBrowser-title"
    >
      Edit Editors for null
    </div>
    <div
      class="PodBrowser-headerContainer"
    >
      <i
        class="PodBrowser-icon-editor PodBrowser-icon PodBrowser-iconEditor"
      />
      <div
        class="PodBrowser-textContainer"
      >
        <div
          class="PodBrowser-titleAndButtonContainer"
        >
          <p
            class="PodBrowser-title"
          >
            Editor
          </p>
        </div>
        <span
          class="PodBrowser-description"
        >
          <p>
            <b>
              Can 
            </b>
            view, edit and delete this resource
          </p>
        </span>
      </div>
    </div>
    <div
      class="PodBrowser-tableContainer"
    >
      <div
        class="PodBrowser-tabsAndAddButtonContainer"
      >
        <div
          class="PodBrowser-tabsContainer PodBrowser-modalTabsContainer"
        >
          <div
            class="PodBrowser-root"
          >
            <div
              class="PodBrowser-scroller PodBrowser-fixed"
              style="overflow: hidden;"
            >
              <div
                aria-label="Permissions Filter tabs"
                class="PodBrowser-flexContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit PodBrowser-selected PodBrowser-selected"
                  data-testid="tab-all"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="PodBrowser-wrapper"
                  >
                    All
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
                <button
                  aria-selected="false"
                  class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit"
                  data-testid="tab-people"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="PodBrowser-wrapper"
                  >
                    People
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
                <button
                  aria-selected="false"
                  class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit"
                  data-testid="tab-groups"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="PodBrowser-wrapper"
                  >
                    Groups
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
              </div>
              <span
                class="PodBrowser-root PodBrowser-colorSecondary PodBrowser-indicator PodBrowser-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-searchBoxContainer hidden"
        >
          <button
            aria-label="search"
            class="PodBrowser-root PodBrowser-root"
            data-testid="search-button"
            tabindex="0"
            type="button"
          >
            <span
              class="PodBrowser-label"
            >
              <i
                aria-label="search"
                class="PodBrowser-icon-search PodBrowser-iconSearch"
              />
            </span>
            <span
              class="PodBrowser-root"
            />
          </button>
          <div
            class="PodBrowser-root PodBrowser-searchInput hidden"
          >
            <input
              aria-label="Search by name or WebId"
              class="PodBrowser-input"
              data-testid="mobile-search-input"
              placeholder="Search by name or WebId"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="close"
            class="PodBrowser-root PodBrowser-root PodBrowser-iconCloseHidden"
            data-testid="close-button"
            tabindex="0"
            type="button"
          >
            <span
              class="PodBrowser-label"
            >
              <i
                aria-label="close"
                class="PodBrowser-icon-cancel hidden"
              />
            </span>
            <span
              class="PodBrowser-root"
            />
          </button>
        </div>
        <button
          class="PodBrowser-button PodBrowser-button PodBrowser-desktopOnly"
          data-testid="add-webid-button"
          iconbefore="add"
        >
          <span
            class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
          />
          <span
            class="PodBrowser-button__text"
          >
            Add WebId
          </span>
        </button>
      </div>
      <div
        class="PodBrowser-searchBoxContainer"
      >
        <button
          aria-label="search"
          class="PodBrowser-root PodBrowser-root"
          tabindex="0"
          type="submit"
        >
          <span
            class="PodBrowser-label"
          >
            <i
              aria-label="search"
              class="PodBrowser-icon-search PodBrowser-iconSearch"
            />
          </span>
          <span
            class="PodBrowser-root"
          />
        </button>
        <div
          class="PodBrowser-root PodBrowser-searchInput"
        >
          <input
            aria-label="Search by name or WebId"
            class="PodBrowser-input"
            data-testid="search-input"
            placeholder="Search by name or WebId"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="PodBrowser-button PodBrowser-button PodBrowser-mobileOnly"
        data-testid="add-webid-button-mobile"
        iconbefore="add"
      >
        <span
          class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
        />
        <span
          class="PodBrowser-button__text"
        >
          Add WebId
        </span>
      </button>
      <table
        class="PodBrowser-table PodBrowser-agentPickerTable"
        role="table"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              colspan="1"
              role="columnheader"
            >
              <span
                class="PodBrowser-tableHeader"
              >
                editor
              </span>
            </th>
            <th
              colspan="1"
              role="columnheader"
            >
              <span
                class="PodBrowser-tableHeader"
              >
                Name
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            role="row"
          >
            <td
              role="cell"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-colorPrimary PodBrowser-colorPrimary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    data-testid="webid-checkbox"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
            </td>
            <td
              role="cell"
            >
              <div
                class="PodBrowser-nameAndAvatarContainer"
              >
                <div
                  class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
                >
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root PodBrowser-fallback"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <p
                  class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
                  data-testid="agent-webid"
                >
                  Example 1
                </p>
              </div>
            </td>
          </tr>
          <tr
            role="row"
          >
            <td
              role="cell"
            >
              <span
                aria-disabled="false"
                class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-colorPrimary PodBrowser-colorPrimary"
              >
                <span
                  class="PodBrowser-label"
                >
                  <input
                    class="PodBrowser-input"
                    data-indeterminate="false"
                    data-testid="webid-checkbox"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <span
                  class="PodBrowser-root"
                />
              </span>
            </td>
            <td
              role="cell"
            >
              <div
                class="PodBrowser-nameAndAvatarContainer"
              >
                <div
                  class="PodBrowser-root PodBrowser-circle PodBrowser-avatar PodBrowser-colorDefault"
                >
                  <svg
                    aria-hidden="true"
                    class="PodBrowser-root PodBrowser-fallback"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                </div>
                <p
                  class="PodBrowser-root PodBrowser-detailText PodBrowser-body1 PodBrowser-detailText"
                  data-testid="agent-webid"
                >
                  Example 2
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="PodBrowser-buttonsContainer"
    >
      <button
        class="PodBrowser-button PodBrowser-button--secondary"
        data-testid="cancel-webids-button"
      >
        <span
          class="PodBrowser-button__text"
        >
          Cancel
        </span>
      </button>
      <button
        class="PodBrowser-button"
        data-testid="submit-webids-button"
      >
        <span
          class="PodBrowser-button__text"
        >
          Save Editors
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentPickerModal without contacts renders a table with tabs, searchbox and an empty state message when there are no contacts 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-paper"
    data-testid="agent-picker-modal"
  >
    <div
      class="PodBrowser-title"
    >
      Edit Editors for null
    </div>
    <div
      class="PodBrowser-headerContainer"
    >
      <i
        class="PodBrowser-icon-editor PodBrowser-icon PodBrowser-iconEditor"
      />
      <div
        class="PodBrowser-textContainer"
      >
        <div
          class="PodBrowser-titleAndButtonContainer"
        >
          <p
            class="PodBrowser-title"
          >
            Editor
          </p>
        </div>
        <span
          class="PodBrowser-description"
        >
          <p>
            <b>
              Can 
            </b>
            view, edit and delete this resource
          </p>
        </span>
      </div>
    </div>
    <div
      class="PodBrowser-tableContainer"
    >
      <div
        class="PodBrowser-tabsAndAddButtonContainer"
      >
        <div
          class="PodBrowser-tabsContainer PodBrowser-modalTabsContainer"
        >
          <div
            class="PodBrowser-root"
          >
            <div
              class="PodBrowser-scroller PodBrowser-fixed"
              style="overflow: hidden;"
            >
              <div
                aria-label="Permissions Filter tabs"
                class="PodBrowser-flexContainer"
                role="tablist"
              >
                <button
                  aria-selected="true"
                  class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit PodBrowser-selected PodBrowser-selected"
                  data-testid="tab-all"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="PodBrowser-wrapper"
                  >
                    All
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
                <button
                  aria-selected="false"
                  class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit"
                  data-testid="tab-people"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="PodBrowser-wrapper"
                  >
                    People
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
                <button
                  aria-selected="false"
                  class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit"
                  data-testid="tab-groups"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="PodBrowser-wrapper"
                  >
                    Groups
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
              </div>
              <span
                class="PodBrowser-root PodBrowser-colorSecondary PodBrowser-indicator PodBrowser-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-searchBoxContainer hidden"
        >
          <button
            aria-label="search"
            class="PodBrowser-root PodBrowser-root"
            data-testid="search-button"
            tabindex="0"
            type="button"
          >
            <span
              class="PodBrowser-label"
            >
              <i
                aria-label="search"
                class="PodBrowser-icon-search PodBrowser-iconSearch"
              />
            </span>
            <span
              class="PodBrowser-root"
            />
          </button>
          <div
            class="PodBrowser-root PodBrowser-searchInput hidden"
          >
            <input
              aria-label="Search by name or WebId"
              class="PodBrowser-input"
              data-testid="mobile-search-input"
              placeholder="Search by name or WebId"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="close"
            class="PodBrowser-root PodBrowser-root PodBrowser-iconCloseHidden"
            data-testid="close-button"
            tabindex="0"
            type="button"
          >
            <span
              class="PodBrowser-label"
            >
              <i
                aria-label="close"
                class="PodBrowser-icon-cancel hidden"
              />
            </span>
            <span
              class="PodBrowser-root"
            />
          </button>
        </div>
        <button
          class="PodBrowser-button PodBrowser-button PodBrowser-desktopOnly"
          data-testid="add-webid-button"
          iconbefore="add"
        >
          <span
            class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
          />
          <span
            class="PodBrowser-button__text"
          >
            Add WebId
          </span>
        </button>
      </div>
      <div
        class="PodBrowser-searchBoxContainer"
      >
        <button
          aria-label="search"
          class="PodBrowser-root PodBrowser-root"
          tabindex="0"
          type="submit"
        >
          <span
            class="PodBrowser-label"
          >
            <i
              aria-label="search"
              class="PodBrowser-icon-search PodBrowser-iconSearch"
            />
          </span>
          <span
            class="PodBrowser-root"
          />
        </button>
        <div
          class="PodBrowser-root PodBrowser-searchInput"
        >
          <input
            aria-label="Search by name or WebId"
            class="PodBrowser-input"
            data-testid="search-input"
            placeholder="Search by name or WebId"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="PodBrowser-button PodBrowser-button PodBrowser-mobileOnly"
        data-testid="add-webid-button-mobile"
        iconbefore="add"
      >
        <span
          class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
        />
        <span
          class="PodBrowser-button__text"
        >
          Add WebId
        </span>
      </button>
      <div
        class="PodBrowser-content"
      >
        <div
          class="PodBrowser-container PodBrowser-container--empty"
        >
          <span
            class="PodBrowser-icon-user PodBrowser-icon-large"
          />
          <h2
            class="text"
          >
            Add a new person with their WebId
          </h2>
          <button
            class="PodBrowser-button PodBrowser-button--small"
            data-testid="empty-state-add-webid-button"
            iconbefore="add"
          >
            <span
              class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
            />
            <span
              class="PodBrowser-button__text"
            >
              Add WebId
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="PodBrowser-buttonsContainer"
    >
      <button
        class="PodBrowser-button PodBrowser-button--secondary"
        data-testid="cancel-webids-button"
      >
        <span
          class="PodBrowser-button__text"
        >
          Cancel
        </span>
      </button>
      <button
        class="PodBrowser-button"
        data-testid="submit-webids-button"
      >
        <span
          class="PodBrowser-button__text"
        >
          Save Editors
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
